Added Student JPA entity